[package]
name = "neotop"
version = "0.1.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
license = "MIT"
description = "A Rust port of htop with some additional improvements"
edition = "2018"

[dependencies]
anyhow = "1.0.34"
better-panic = "0.2.0" # TODO
chrono = "0.4.19" # TODO
crossbeam-channel = "0.5.0"
crossterm = "0.18.2"
ctrlc = { version = "3.1.7", features = ["termination"] }
num-rational = "0.3.2"
platform-dirs = "0.2.0"
psutil = "3.1.0"
size = "0.1.2" # TODO
structopt = "0.3.20"
tui = { version = "0.13.0", default-features = false, features = ["crossterm"] }
